Weekly progress on 3.0.0
